margin bottom fix on mobile

--- a/static/css/builder-mobile.css
+++ b/static/css/builder-mobile.css
@@ -962,6 +962,7 @@ float: none;
     pointer-events:all;
     border-radius: 0px !important;
     border: none !important;
+    margin-bottom: 60px !important;
 
 }
 
